test/integration/semantic/types1.pal
{17,18,21,22,23,24,27,28}
{
    Test equality of structured types
}
program test(input, output);
type
	arr1 = array[1..10] of integer;
	arr2 = array[1..10] of integer;
var
	a : arr1;
	b : arr1;
	c : arr2;
	d : arr2;
begin
	a := a;
	a := b;
	a := c;		// error
	a := d;		// error
	b := a;
	b := b;
	b := c;		// error
	b := d;		// error
	c := a;		// error
	c := b;		// error
	c := c;
	c := d;
	d := a;		// error
	d := b;		// error
	d := c;
	d := d;



end.
